mule-user-guide/v/3.3/using-interceptors.adoc
= 使用拦截器

Mule ESB拦截器对于将行为附加到多个组件很有用。拦截器模式通常被称为实用AOP（面向方面​​编程），因为它允许开发人员拦截对象上的处理并可能改变处理和结果。 （另请参阅 http://static.springframework.org/spring/docs/2.0.x/reference/aop.html[Spring AOP]）。拦截器对于将配置文件，许可和安全检查等行为附加到组件上非常有用。

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/interceptor/AbstractEnvelopeInterceptor.html[AbstractEnvelopeInterceptor]

是一个包络过滤器，它将在组件被调用之前和之后执行。适合记录和分析。

== 拦截器事件流

以下显示了拦截器堆栈和事件流的示例。

image:interceptor.png[拦截器]

写== 拦截器

如果您想拦截到入站消息流的组件的消息流，则应该实现Interceptor接口。它有一个单一的方法：

[source, code, linenums]
----
MuleEvent process(MuleEvent event);
----

`event`参数包含当前消息。开发人员可以从消息中提取当前的`MuleMessage`，并根据需要对其进行处理。 `process`方法必须返回将传递给组件（或链中的下一个拦截器）的`MuleMessage`。

http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/interceptor/AbstractEnvelopeInterceptor.html[AbstractEnvelopeInterceptor]是在调用组件之前和之后执行的包络过滤器。适合记录和分析。以相同的方式工作，除了它公开两个在事件处理之前和之后被调用的方法：

[source, code, linenums]
----
MuleEvent before(MuleEvent event) throws MuleException;
 
MuleEvent after(MuleEvent event) throws MuleException;
----

== 配置拦截器

拦截器可以在您的组件上配置如下：

[source, xml, linenums]
----
<flow name="MyService">
    <custom-interceptor class="org.my.CustomInterceptor"/>
    <logging-interceptor/>
    <interceptor-stack ref="testInterceptorStack"/>
    <timer-interceptor/>
    <prototype-object class="org.my.ComponentImpl"/>
</flow>
----

[WARNING]
配置拦截器时，必须明确指定对象工厂（在本例中为`<prototype-object>`），而不是使用`<component class>`快捷方式。

您还可以定义_interceptor stacks_，它们是一个或多个可以使用逻辑名称引用的拦截器。要使用拦截器堆栈，您必须首先在Mule XML配置文件的全局部分（`<model>`元素上面）配置它：

[source, xml, linenums]
----
<interceptor-stack name="default">
    <custom-interceptor class="org.my.CustomInterceptor"/>
    <logging-interceptor/>
</interceptor-stack>
----

您可以在组件上配置多个`<interceptor>`元素，并且可以使用内置拦截器，自定义拦截器和对拦截器堆栈的引用进行混合。

== 拦截器配置参考

== 记录拦截器

日志拦截器（从1.x移植）。

<logging-interceptor...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|===

<logging-interceptor...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 自定义拦截器

用户实现的拦截器。

<custom-interceptor...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|类 |类名 |是 |   | Interceptor接口的实现。
|===

<custom-interceptor...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|=======
| {名称{1}}基数 |说明
| spring：property  | 0 .. *  |自定义配置的Spring样式属性元素。
|=======

== 拦截器堆栈

<interceptor-stack...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|名称 |名称 |是 |   |用于标识此拦截器堆栈的名称。
|===

<interceptor-stack...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|抽象拦截器 | 0..1  |一个拦截器元素的占位符。
|===

== 拦截器堆栈

全球定义的一系列intrceptors的参考。

<interceptor-stack...>的{​​{0}}属性

[%header,cols="5*"]
|====
| {名称{1}}输入 |必 |缺省 |说明
| ref  |字符串 |是 |   |要使用的拦截器堆栈的名称。
|====

<interceptor-stack...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 计时器拦截器

定时器拦截器（从1.x移植）。

<timer-interceptor...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|===

<timer-interceptor...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===
